grammar.js
        document: $ => seq(
            $.version,
            repeat(
                choice(
                    $.import,
                    $.struct,
                    $.workflow,
                    $.task
                )
            )
        ),

        version: $ => seq(
            KEYWORD.version,
            field("identifier", choice(
                $.float,
                $.simple_string
            ))
        ),

        workflow: $ => seq(
            KEYWORD.workflow,
            field("name", $.identifier),
            field("body", $.workflow_body),
        ),

        workflow_body: $ => block(
            repeat1(
                choice(
                    $.input,
                    $.output,
                    $.bound_declaration,
                    $.call,
                    $.scatter,
                    $.conditional,
                    $.meta,
                    $.parameter_meta
                )
            )
        ),

        input: $ => seq(
            KEYWORD.input,
            field("declarations", $.input_declarations)
        ),

        input_declarations: $ => block(
            repeat1(
                choice(
                    $.unbound_declaration,
                    $.bound_declaration
                )
            )
        ),

        bound_declaration: $ => seq(
            field("type", $._type),
            field("name", $.identifier),
            OPER.assign,
            field("expression", $.expression)
        ),

        _type: $ => prec.right(choice(
            $.optional_type,
            $._required_type,
        )),

        boolean_type: $ => KEYWORD.boolean,
        string_type: $ => KEYWORD.string,
        apply_expression: $ => prec(PREC.apply, seq(
            field("name", $.identifier),
            field("arguments", $.argument_list)
        )),

        argument_list: $ => seq(
            SYMBOL.lparen,
            optional(commaSep1($.expression)),
            SYMBOL.rparen
        ),

        ternary_expression: $ => prec.right(seq(
            KEYWORD.if,
            field("condition", $.expression),
            KEYWORD.then,
            field("true", $.expression),
            KEYWORD.else,
            field("false", $.expression)
        )),

        true: $ => KEYWORD.true,
        float: $ => {
            const sign = /[\+-]?/
            const digits = /\d+/
            const exponent = seq(/[eE][\+-]?/, digits)

            return prec.right(PREC.number, token(choice(
                seq(sign, digits, '.', optional(digits), optional(exponent)),
                seq(sign, optional(digits), '.', digits, optional(exponent)),
                seq(sign, digits, exponent)
            )))
        },

        string: $ => seq(
            alias($._string_start, SYMBOL.dquote),
            optional(field("parts", $.string_parts)),
            alias($._string_end, SYMBOL.dquote)
        ),

        string_parts: $ => repeat1(
            choice(
                $.placeholder,
                $.escape_sequence,
                alias($.string_content, $.content)
            )
        ),

        placeholder: $ => choice(
            $._tilde_placeholder,
            $._dollar_placeholder
        ),

        _tilde_placeholder: $ => seq(
            SYMBOL.tilde_placeholder,
            field("expression", $.expression),
            SYMBOL.rbrace
        ),

        _dollar_placeholder: $ => seq(
            SYMBOL.dollar_placeholder,
            field("expression", $.expression),
            SYMBOL.rbrace
        ),

        escape_sequence: $ => token(prec(1, seq(
            SYMBOL.escape,
            choice(
                /u[a-fA-F\d]{4}/,
                /U[a-fA-F\d]{8}/,
                /x[a-fA-F\d]{2}/,
                /[0-7]{3}/,
                /['"nt~$\\]/
            )
        ))),

        array: $ => field("elements", $.array_elements),

        array_elements: $ => seq(
            SYMBOL.lbrack,
            optional(commaSep1($.expression)),
            SYMBOL.rbrack
        ),

        identifier: $ => /[a-zA-Z][a-zA-Z0-9_]*/,
